--- a/bitcoin_pages/templates/bitcoin_pages/about-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/about-us.html
@@ -10,7 +10,7 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>About Bitfonix</h2>
+							<h2>About FonixCoin</h2>
 							<p>Lorem ipsum dolor sit amet</p>
 						</div>
 					</div>
@@ -91,7 +91,7 @@
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>Bitcoin Legality</h5>
-						<h3>Why Choose <span>Bitfonix</span></h3>
+						<h3>Why Choose <span>FonixCoin</span></h3>
 					</div>
 				</div>
 			</div>
@@ -104,7 +104,7 @@
 						</div>
 						<div class="single-wcus-text">
 							<h5>Easy Trading</h5>
-							<p>Bitfonix offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research. 
+							<p>FonixCoin offers a methodical approach to ensure profitability. Each trade is calculated through risk management techniques, technical analysis, and deep fundamental research. 
 								You will be given signaling of point of entry for every single trade in CFD over the counter trading spot market.</p>
 						</div>
 					</div>
@@ -224,7 +224,7 @@
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h5>Bitfonix conversation</h5>
+						<h5>FonixCoin conversation</h5>
 						<h3>Trade Bitcoin <span>With Us</span></h3>
 					</div>
 				</div>
@@ -248,7 +248,7 @@
 									<td>427BTC</td>
 								</tr>
 								<tr>
-									<th scope="row"><i class="icofont icofont-cur-dollar"></i> Bitfonix</th>
+									<th scope="row"><i class="icofont icofont-cur-dollar"></i> FonixCoin</th>
 									<td>97.45$</td>
 									<td>492BTC</td>
 								</tr>
