--- a/bitcoin_pages/templates/bitcoin_pages/coin_buy_and_sell.html
+++ b/bitcoin_pages/templates/bitcoin_pages/coin_buy_and_sell.html
@@ -117,15 +117,15 @@
 					<div class="row mt-4">
 						<div class="col-12 ser-page-into">
 							<h4>Coin buy and Sell</h4>
-							<p>Bitfonix offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, Ethereum, EOS, Litecoin, Ripple, NEO and many other digital assets with minimal slippage.Bitfinex also boasts a suite of order types to help traders take advantage of every situation.</p>
+							<p>FonixCoin offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, Ethereum, EOS, Litecoin, Ripple, NEO and many other digital assets with minimal slippage.Bitfinex also boasts a suite of order types to help traders take advantage of every situation.</p>
 						</div>
 						<!-- end col -->
 						<div class="row">
 							<div class="col-lg-6 col-md-6 col-12 mb-lg-0 mb-md-0 mb-4 pl-4 ser-page-into">
 								<ul>
 									<li><i class="icofont icofont-ui-press"></i> <strong>Professional connectivity -</strong>Partnering with Market Synergy, corporate accounts and professional traders can take advantage of the fastest trading speed through institutional-grade connectivity.</li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Chart features -</strong>Bitfonix facilitates a graphical trading experience with advanced charting functionality. </li>
-									<li><i class="icofont icofont-ui-press"></i> <strong>Corporate accounts -</strong> Bitfonix has a bespoke offering expertly tailored to meet the specific needs of professional and institutional traders.</li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Chart features -</strong>FonixCoin facilitates a graphical trading experience with advanced charting functionality. </li>
+									<li><i class="icofont icofont-ui-press"></i> <strong>Corporate accounts -</strong> FonixCoin has a bespoke offering expertly tailored to meet the specific needs of professional and institutional traders.</li>
 									<li><i class="icofont icofont-ui-press"></i> <strong>Enhanced Reporting -</strong> Bitfinex’s enhanced reporting framework would benefit both traders and developers.</li>
 								</ul>
 							</div>
@@ -166,7 +166,7 @@
 									<div class="tab-pane animated fadeInRight active show" id="srone">
 										<div class="row">
 											<div class="col-lg-5 col-md-5 col-12 mb-lg-0 mb-md-0 mb-sm-3 mb-3">
-												<p>Bitfonix allows users to trade with up to 5x leverage by receiving funding from the peer to peer margin funding platform. Users can enter an order to borrow the desired amount of funding at the rate and duration of their choice.</p>										
+												<p>FonixCoin allows users to trade with up to 5x leverage by receiving funding from the peer to peer margin funding platform. Users can enter an order to borrow the desired amount of funding at the rate and duration of their choice.</p>										
 											</div>
 											<div class="col-lg-7 col-md-7 col-12 mt-4">
 												<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
@@ -179,7 +179,7 @@
 												<img class="img-fluid" src="{% static 'assets/img/blog/1.jpg' %}" alt="">
 											</div>
 											<div class="col-lg-5 col-md-5 col-12">
-												<p>The Bitfonix margin funding market provides a secure way to earn interest on fiat and digital assets by providing funding to traders wanting to trade with leverage. Users can offer funding across a wide range of currencies & assets, at the rate and duration of their choice.</p>										
+												<p>The FonixCoin margin funding market provides a secure way to earn interest on fiat and digital assets by providing funding to traders wanting to trade with leverage. Users can offer funding across a wide range of currencies & assets, at the rate and duration of their choice.</p>										
 											</div>
 										</div>
 									</div>
