--- a/bitcoin_pages/templates/bitcoin_pages/faq.html
+++ b/bitcoin_pages/templates/bitcoin_pages/faq.html
@@ -114,7 +114,7 @@
                     <!--Block-->
                     <li class="accordion block">
                         <div class="acc-btn">
-                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with Bitfonix?</div>
+                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with FonixCoin?</div>
                         <div class="acc-content">
                             <div class="content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
@@ -183,7 +183,7 @@
                     <!--Block-->
                     <li class="accordion block">
                         <div class="acc-btn active">
-                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with Bitfonix?</div>
+                            <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What about the trading with FonixCoin?</div>
                         <div class="acc-content current">
                             <div class="content">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco. </p>
