--- a/bitcoin_pages/templates/bitcoin_pages/index.html
+++ b/bitcoin_pages/templates/bitcoin_pages/index.html
@@ -14,7 +14,7 @@
 							<div class="col-lg-7 col-md-10 col-12 mr-auto text-left">
 								<div class="home-single-slide-dec">
 									<h2>Secure & easy way to <br> buy & sell bitcoin</h2>
-									<p class="text-capitalize">We put the power in your hands, to buy, sell and trade digital currency. We are Bitfonix, consistently rated the best and most secure cryptocurrency exchange.</p>
+									<p class="text-capitalize">We put the power in your hands, to buy, sell and trade digital currency. We are FonixCoin, consistently rated the best and most secure cryptocurrency exchange.</p>
 									<div class="home-single-slide-button">
 										<a href="#" class="btn-style btn-filled">Learn More</a>
 										<a href="{% url 'my-auth:create' %}" class="btn-style btn-border">Get started</a>
@@ -77,7 +77,7 @@
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>why buy & sell</h5>
-						<h3>Bitfonix <span>Features</span></h3>
+						<h3>FonixCoin <span>Features</span></h3>
 					</div>
 				</div>
 			</div>
@@ -119,7 +119,7 @@
 								<h5>Coin Buy & Sell</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>With Bitfonix, you can easily buy Bitcoin with cash.</p>
+								<p>With FonixCoin, you can easily buy Bitcoin with cash.</p>
 							</div>
 						</div>
 					</div>
@@ -182,7 +182,7 @@
 								<h5>Cryptocurrency Trading</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Bank on Bitfonix’s experience as a global fintech leader.</p>
+								<p>Bank on FonixCoin’s experience as a global fintech leader.</p>
 							</div>
 						</div>
 					</div>
@@ -203,7 +203,7 @@
 								<h5>Bitcoin Legality</h5>
 							</div>
 							<div class="single-about-dec">
-								<p>Access crypto assets exchange platform technology under the registered trademark "BITFONIX"</p>
+								<p>Access crypto assets exchange platform technology under the registered trademark "FonixCoin"</p>
 							</div>
 						</div>
 					</div>
@@ -245,7 +245,7 @@
                                 <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What is a Cryptocurrency Exchange?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At Bitfonix, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.</p>
+                                    <p>A cryptocurrency exchange is a service for changing digital currencies, such as Bitcoin, Ethereum, and more, to fiat (paper) currencies or for other digital currencies. At FonixCoin, you can exchange your fiat currency, such as dollars or Euro, for several cryptocurrencies. You can also exchange your Bitcoin for fiat.</p>
                                 </div>
                             </div>
                         </li>
@@ -256,7 +256,7 @@
                                 <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>Why must I provide my personal details?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>Before creating your first order, we need to know a bit about you. As a financial service, Bitfonix is committed to the highest security and privacy standards. This also helps us keep your account safe, fight fraud, and more. The process is called verification and is something everyone must go through before buying cryptocurrency anywhere. After submitting your details for verification, we’ll then quickly go over it and make sure everything looks good. This usually happens within the hour.</p>
+                                    <p>Before creating your first order, we need to know a bit about you. As a financial service, FonixCoin is committed to the highest security and privacy standards. This also helps us keep your account safe, fight fraud, and more. The process is called verification and is something everyone must go through before buying cryptocurrency anywhere. After submitting your details for verification, we’ll then quickly go over it and make sure everything looks good. This usually happens within the hour.</p>
                                 </div>
                             </div>
                         </li>
@@ -264,10 +264,10 @@
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How long does it take for Bitfonix to send my bitcoins once I’ve paid?</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>How long does it take for FonixCoin to send my bitcoins once I’ve paid?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>Bitfonix sends the coins immediately after both your payment and wallet address have been confirmed.</p>
+                                    <p>FonixCoin sends the coins immediately after both your payment and wallet address have been confirmed.</p>
                                 </div>
                             </div>
                         </li>
@@ -278,7 +278,7 @@
                                 <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>Where can I get a Bitcoin/Ethereum wallet?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>Bitfonix is not a wallet provider - we simply send your coins to the wallet of your choice.</p>
+                                    <p>FonixCoin is not a wallet provider - we simply send your coins to the wallet of your choice.</p>
                                 </div>
                             </div>
                         </li>
@@ -286,10 +286,10 @@
                         <!--Block-->
                         <li class="accordion block">
                             <div class="acc-btn">
-                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What methods of payment does Bitfonix offer?</div>
+                                <div class="icon-outer"><span class="icon icofont icofont-ui-press"></span></div>What methods of payment does FonixCoin offer?</div>
                             <div class="acc-content">
                                 <div class="content">
-                                    <p>At Bitfonix you can currently buy bitcoin and other cryptocurrencies with bank wire transfer.</p>
+                                    <p>At FonixCoin you can currently buy bitcoin and other cryptocurrencies with bank wire transfer.</p>
                                 </div>
                             </div>
                         </li>
@@ -316,7 +316,7 @@
 					</div>
 					<div class="promo-content">
 						<h4>Who we are?</h4>
-						<p>Bitfonix, founded in 2013 by experienced system architects and technology experts, is one of the oldest and fastest growing crypto exchanges in existence. With an unparalleled track record of reliability.</p>
+						<p>FonixCoin, founded in 2013 by experienced system architects and technology experts, is one of the oldest and fastest growing crypto exchanges in existence. With an unparalleled track record of reliability.</p>
 						<a href="{% url 'about-us' %}" class="btn-style btn-filled mt-3">Read More <i class="icofont icofont-caret-right"></i></a>
 						<div class="signature-img float-lg-right float-md-right float-none mt-3"><img src="{% static 'assets/img/bg/signature.png' %}" class="img-fluid" alt=""></div>
 					</div>	
@@ -334,7 +334,7 @@
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h3>Why Choose <span>Bitfonix</span></h3>
+						<h3>Why Choose <span>FonixCoin</span></h3>
 					</div>
 				</div>
 			</div>
@@ -349,7 +349,7 @@
 								</div>
 								<div class="single-wcus-text">
 									<h5>Easy Trading</h5>
-									<p>Our terminal is built on the best technology and lets you trade effortlessly any of the Bitfonix currency pair.</p>
+									<p>Our terminal is built on the best technology and lets you trade effortlessly any of the FonixCoin currency pair.</p>
 								</div>
 							</div>
 						</div>
@@ -373,7 +373,7 @@
 								</div>
 								<div class="single-wcus-text">
 									<h5>Money Exchange</h5>
-									<p>Bitfonix offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, and many other digital assets with minimal slippage</p>
+									<p>FonixCoin offers order books with top tier liquidity, allowing users to easily exchange Bitcoin, and many other digital assets with minimal slippage</p>
 								</div>
 							</div>
 						</div>
@@ -416,7 +416,7 @@
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>what we do</h5>
-						<h3>Bitfonix <span>Services</span></h3>
+						<h3>FonixCoin <span>Services</span></h3>
 					</div>
 				</div>
 			</div>
@@ -455,7 +455,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>With Bitfonix, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.</p>
+							<p>With FonixCoin, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.</p>
 						</div>	
 					</div>							
 				</div>
@@ -474,7 +474,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>Bitcoin and Ethereum is an open source network, much more than just a digital currency. At Bitfonix, we not only trade your assets, we secure it as well.</p>
+							<p>Bitcoin and Ethereum is an open source network, much more than just a digital currency. At FonixCoin, we not only trade your assets, we secure it as well.</p>
 						</div>	
 					</div>							
 				</div>
@@ -493,7 +493,7 @@
 							</div>
 						</div>
 						<div class="single-service-dec">
-							<p>Bank on Bitfonix’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.</p>
+							<p>Bank on FonixCoin’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.</p>
 						</div>	
 					</div>							
 				</div>
@@ -518,7 +518,7 @@
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>our masters</h5>
-						<h3>Bitfonix <span>Expert</span></h3>
+						<h3>FonixCoin <span>Expert</span></h3>
 					</div>
 				</div>
 			</div>
@@ -639,7 +639,7 @@
 			<div class="row">
 				<div class="col-12 text-center">
 					<div class="section-title">
-						<h5>Bitfonix conversation</h5>
+						<h5>FonixCoin conversation</h5>
 						<h3>Trade Bitcoin <span>With Us</span></h3>
 					</div>
 				</div>
@@ -698,7 +698,7 @@
 						</div>
 						<div class="single-wprocess-text">
 							<h5>Trading Strategy</h5>
-							<p>Bitfonix implements reliable strategies by providing our users with state-of-the-art trading tools, innovative technology and unparalleled levels of customer service.</p>
+							<p>FonixCoin implements reliable strategies by providing our users with state-of-the-art trading tools, innovative technology and unparalleled levels of customer service.</p>
 						</div>
 					</div>
 				</div>
@@ -710,7 +710,7 @@
 						</div>
 						<div class="single-wprocess-text">
 							<h5>Group Planing</h5>
-							<p>Never trade crypto alone. Bitfonix is much more than just a place to trade. Use award-winning social trading features to connect with over 10 million users worldwide.</p>
+							<p>Never trade crypto alone. FonixCoin is much more than just a place to trade. Use award-winning social trading features to connect with over 10 million users worldwide.</p>
 						</div>
 					</div>
 				</div>
@@ -751,7 +751,7 @@
 							<img class="img-fluid" src="{% static 'assets/img/bg/bg8.jpg' %}" alt="">
 						</div>
 						<div class="youtube-promo-video">
-							<a href="https://www.youtube.com/watch?v=OTewW0jWRQM" data-title="Bitfonix PROMO VIDEO" data-vbtype="youtube" class="venobox info vbox-item" data-gall="gallu">
+							<a href="https://www.youtube.com/watch?v=OTewW0jWRQM" data-title="FonixCoin PROMO VIDEO" data-vbtype="youtube" class="venobox info vbox-item" data-gall="gallu">
 								<i class="icofont icofont-ui-play"></i>
 							</a>
 						</div>
@@ -826,7 +826,7 @@
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/13.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>Its been a pleasure trading with Bitfonix. Great platform for starting traders. Great selsection and transparent fee system.</p>
+									<p>Its been a pleasure trading with FonixCoin. Great platform for starting traders. Great selsection and transparent fee system.</p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Yvelmkens fjord</p>
@@ -838,7 +838,7 @@
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/12.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p> So easy and fun as i ahvent had to do much. Bitfonix has been making my trading experience enjoyable and secure. </p>
+									<p> So easy and fun as i ahvent had to do much. FonixCoin has been making my trading experience enjoyable and secure. </p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Mcleroy rhithers</p>
@@ -850,7 +850,7 @@
 									<img class="img-fluid rounded-circle" src="{% static 'assets/img/clients/11.jpg' %}" alt="">
 								</div>
 								<div class="single-testimonial-content">
-									<p>Bitfonix is a fantastic trading platform, both from an ease of use and technical perspective. I'm very satisfied with the service they Bitfonix provide. keep it up.</p>
+									<p>FonixCoin is a fantastic trading platform, both from an ease of use and technical perspective. I'm very satisfied with the service they FonixCoin provide. keep it up.</p>
 								</div>
 								<div class="single-testimonial-meta">
 									<p>- Aleixy shalom</p>
@@ -893,7 +893,7 @@
 							<img class="img-fluid" src="{% static 'assets/img/blog/2.jpg' %}" alt="">
 						</div>
 						<div class="single-blog-hdec">
-							<a href="#"><h5>Final Testing for ETC Support on Bitfonix</h5></a>
+							<a href="#"><h5>Final Testing for ETC Support on FonixCoin</h5></a>
 							<span class="post-date"><i class="icofont icofont-calendar"></i> 17 Dec 2018</span>
 							<span class="post-comment"><i class="fa fa-comment"></i> 3 comments</span>
 							<p>
@@ -943,7 +943,7 @@
 							<img class="img-fluid" src="{% static 'assets/img/blog/3.jpg' %}" alt="">
 						</div>
 						<div class="single-blog-hdec">
-							<a href="#"><h5>Bitfonix Custody is Officially Open For Business</h5></a>
+							<a href="#"><h5>FonixCoin Custody is Officially Open For Business</h5></a>
 							<span class="post-date"><i class="icofont icofont-calendar"></i> 19 Dec 2018</span>
 							<span class="post-comment"><i class="fa fa-comment"></i> 4 comments</span>
 							<p>
