--- a/bitcoin_pages/templates/bitcoin_pages/services.html
+++ b/bitcoin_pages/templates/bitcoin_pages/services.html
@@ -10,7 +10,7 @@
 				<div class="row">
 					<div class="col-12 text-center">
 						<div class="single-page-title">
-							<h2>Bitfonix Services</h2>
+							<h2>FonixCoin Services</h2>
 							<p>Our Range of Sevices</p>
 						</div>
 					</div>
@@ -76,7 +76,7 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>With Bitfonix, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.
+								<p>With FonixCoin, you can easily buy Bitcoin with cash, as well as other cryptocurrencies we offer on the platform.
 									<a href="{% url 'coin_buy' %}">[...]</a>
 								</p>
 							</div>	
@@ -99,7 +99,7 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Bitcoin and Ethereum is an open source network, much more than just a digital currency. At Bitfonix, we not only trade your assets, we secure it as well.
+								<p>Bitcoin and Ethereum is an open source network, much more than just a digital currency. At FonixCoin, we not only trade your assets, we secure it as well.
 									<a href="{% url 'bitcoin_ethereum' %}">[...]</a>
 								</p>
 							</div>	
@@ -122,7 +122,7 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Bank on Bitfonix’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.
+								<p>Bank on FonixCoin’s experience as a global fintech leader since the early days of Blockchain to provide you with a complete crypto trading solution.
 									<a href="{% url 'crypto_trading' %}">[...]</a>
 								</p>
 							</div>	
@@ -145,7 +145,7 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>BIT Solution Ltd (hereinafter "The Platform Technology") provides access to crypto assets exchange platform technology under the registered trademark "BITFONIX".
+								<p>BIT Solution Ltd (hereinafter "The Platform Technology") provides access to crypto assets exchange platform technology under the registered trademark "FonixCoin".
 									<a href="{% url 'bitcoin_legality' %}">[...]</a>
 								</p>
 							</div>	
@@ -168,7 +168,7 @@
 								</div>
 							</div>
 							<div class="single-service-dec">
-								<p>Bitfonix takes every necessary precaution to keep its clients’ personal information and funds safe and secure.
+								<p>FonixCoin takes every necessary precaution to keep its clients’ personal information and funds safe and secure.
 									<a href="{% url 'security_ensure' %}">[...]</a>
 								</p>
 							</div>	
