--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico" />
-    <title>Bitfonix - Bitcoin And Crypto Currency HTML Template</title>
+    <title>FonixCoin - Bitcoin And Crypto Currency Trading</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'assets/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Google Font  -->
@@ -201,7 +201,7 @@
                                  <i class="fab fa-gg-circle"></i>
                                 </div>
 								<div class="footer-logo-text">
-                                    <h3>Bitfonix</h3>
+                                    <h3>FonixCoin</h3>
                                     <p>Bitcoin Trading Center</p>
                                 </div>
 							</a>
