--- a/bitcoin_pages/templates/bitcoin_pages/bitcoin_trading.html
+++ b/bitcoin_pages/templates/bitcoin_pages/bitcoin_trading.html
@@ -184,7 +184,7 @@
 										</div>
 									</div>
 									<div class="tab-pane animated fadeInRight" id="srthree">
-										<p class="mb-3">Bitfonix makes it simple and safe to buy, sell, and hold BTC.</p>
+										<p class="mb-3">FonixCoin makes it simple and safe to buy, sell, and hold BTC.</p>
 										<ul>
 											<li><i class="icofont icofont-ui-press"></i> <strong>Convert -</strong>Want to own other crypto? Convert any portion of your Bitcoin balance to another crypto.</li>
 											<li><i class="icofont icofont-ui-press"></i> <strong>Transfer -</strong> Unlike sending money overseas, you can send Bitcoin to anyone in the world virtually instantly.</li>
