--- a/bitcoin_pages/templates/bitcoin_pages/contact-us.html
+++ b/bitcoin_pages/templates/bitcoin_pages/contact-us.html
@@ -41,7 +41,7 @@
 				<div class="col-12 text-center">
 					<div class="section-title">
 						<h5>response with in minute</h5>
-						<h3>Contact <span>Bitfonix</span></h3>
+						<h3>Contact <span>FonixCoin</span></h3>
 					</div>
 				</div>
 			</div>
@@ -122,7 +122,7 @@
 				<div class="col-lg-7 mx-auto">
 					<div class="contact-form-wrapper">
 						<div class="contact-form">
-							<form id="contact-form" class="form" name="enq" method="POST" action="http://skullysmusic.com/tm/ft/bt/bitfonix-preview3/Bitfonix/form-process.php">
+							<form id="contact-form" class="form" name="enq" method="POST" action="">
 								<div class="row">
 									<div class="form-group col-12 mb-3">
 										<label>First Name:</label>
